# iwmi-odr-odc

./: Makefile  README.md  compose.yaml  jupyter_lab_config.py  pyproject.toml
products/: iwmi_green_et_monthly.odc-product.yaml
src/iwmi_odr_odc_product_py/: prepare_iwmi_blue_et_monthly_metadata.py  stac.py
src/iwmi_odr_odc_product_py/eo3assemble/: easi_prepare_template.py
